# event-driven-vision-processing-engine

./: .gitignore  CMakeLists.txt  README.md
build-default/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  EventDrivenVisionEngine.slnx  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  vision_engine.vcxproj  vision_engine.vcxproj.filters
build-default/vision_engine.dir/Release/: vision_engine.exe.recipe
build-default/vision_engine.dir/Release/vision_engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  vision_engine.lastbuildstate
build-default/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build-default/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build-default/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build-default/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
src/: main.cpp
src/vision/: Contracts.hpp  EventSynthesizer.cpp  EventSynthesizer.hpp  ZeroCopyIngest.cpp  ZeroCopyIngest.hpp
tests/: vision_engine_tests.cpp
